#425: Additional parameters added to createEntityMultipleListItemAttribute and deleteEntityListItemAttribute; added deleteEntityMultipleListItemAttribute